- Added a simple form of combat for hunting
- Ability for stockpile groups to hold corpses, only enabled for "Food" group currently
- Changed fish from items to creatures for butchery station to work consistently
- Corrected label on unpowered crafting stations (e.g. ore crusher) to show they are slowed but not disabled
- Fix for crafting stations to use material selections from crafting management screen

Alpha 7.0.4 - 28th September 2021

- Furniture placements on top of irrigation channels no longer show as valid
- Fix for an issue with liquid transfers affecting save files fro Alpha 7.0.2 and below being used in Alpha 7.0.3
- Made liquid containers with a very small amount of liquid count as empty

Alpha 7.0.3 - 28th September 2021

- Settlers will now collect water from wells to transfer to other containers (such as a water barrel)
- Corrected labelling of soup with 3 ingredients
- Added missing translation labels
- Fix for a crash when trying to get into a bed which has been removed

Alpha 7.0.2 - 26th September 2021

- Fix for a crash related to late-growing Hemp
- Fix for a crash when sleeping in bed but the bed no longer exists
- Increased opacity of sleeping spot

Alpha 7.0.1 - 25th September 2021

- Fix for a crash when cancelling unneeded jobs

Alpha 7 - 25th September 2021

- Added channels and piping for liquid flow between tiles
- Added water pump furniture to extract liquid from river and pump into pipes
- Added well furniture for usage of pumped water
- Added power generating furniture - windmill and water wheel
- Added mechanical power grid system for transfer of power between producers and consumers (such as windmill and water pump)
- Plants now require water to grow, which can be provided by rain or nearby irrigation channels containing water
- Ore crusher now requires power to operate, or else it will take significantly longer
- Added hemp crop, which requires processing in a retting station and then it can be crafted into rope or linen